fix build.sbt